<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/C_FFFFFF"
    android:orientation="vertical">

    <!-- 전체화면 -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="355dp">

        <!-- ScollView가 담고 있는 필수 레이아웃 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:orientation="vertical">

            <!-- 컨텐츠 헤더 -->
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/str_auth_notice_header"
                android:textColor="@color/C_000000"
                android:textSize="16sp"
                app:fontFamily="@font/notosans_medium_font"/>

            <!-- 컨텐츠 내용 1 -->
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="18dp"
                android:gravity="center|left"
                android:lineSpacingExtra="5dp"
                android:text="@string/msg_auth_notice_message_1"
                android:textColor="@color/C_84888C"
                android:textSize="14sp"
                app:fontFamily="@font/notosans_medium_font"/>

            <!-- 컨텐츠 내용 2 -->
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txt_sms_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="18dp"
                android:gravity="center|left"
                android:lineSpacingExtra="5dp"
                android:text="@string/msg_clb_pay"
                android:textColor="@color/C_84888C"
                android:textSize="14sp"
                app:fontFamily="@font/notosans_medium_font"/>

            <!-- 컨텐츠 내용 3 -->
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txt_otp_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:gravity="center|left"
                android:lineSpacingExtra="5dp"
                android:text="@string/str_privacy_policy"
                android:textColor="@color/C_84888C"
                android:textSize="14sp"
                app:fontFamily="@font/notosans_medium_font"/>

            <!-- 컨텐츠 내용 4 -->
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:gravity="center|left"
                android:lineSpacingExtra="5dp"
                android:text="@string/msg_auth_notice_message_4"
                android:textColor="@color/C_84888C"
                android:textSize="14sp"
                app:fontFamily="@font/notosans_medium_font"/>
        </LinearLayout>
    </ScrollView>

    <!-- 다시보지 않기 레이아웃 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="top|left"
        android:orientation="horizontal">

        <!-- 체크박스 -->
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_not_review"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="11dp"
            android:background="@drawable/drawable_checkbox_custom"
            android:button="@null"/>

        <!-- 다시 보지 않기 -->
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:lineSpacingExtra="5dp"
            android:text="@string/str_not_review"
            android:textColor="@color/C_84888C"
            android:textSize="14sp"
            app:fontFamily="@font/notosans_medium_font"/>
    </LinearLayout>

    <!-- 확인 및 OTP 등록 버튼 -->
    <LinearLayout
        android:id="@+id/layout_btn_space"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">

        <!-- 확인 -->
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/C_C0C0C0"
            android:gravity="center"
            android:text="@string/str_confirm"
            android:textColor="@drawable/drawable_alert_button_text_color"
            android:textSize="18dp"
            app:fontFamily="@font/notosans_medium_font"/>

        <!-- Google OTP 이동 -->
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/btn_otp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/C_DC1313"
            android:gravity="center"
            android:text="@string/str_google_reg"
            android:textColor="@drawable/drawable_alert_button_text_color"
            android:textSize="18dp"
            app:fontFamily="@font/notosans_medium_font"/>
    </LinearLayout>

</LinearLayout>