<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="286dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/C_FFFFFF"
    android:orientation="vertical">


    <!-- ScollView가 담고 있는 필수 레이아웃 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <!-- 컨텐츠 내용 타이틀 -->
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/str_update_title"
            android:textColor="@color/C_000000"
            android:textSize="24dp"
            app:fontFamily="@font/notosans_medium_font" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">
            <!-- welcome 내용 메시지 -->
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:lineSpacingExtra="5dp"
                android:text="@string/msg_update"
                android:textColor="@color/C_000000"
                android:textSize="12sp"
                app:fontFamily="@font/notosans_medium_font" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_current_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:lineSpacingExtra="5dp"
                android:text="@string/str_current_version"
                android:textColor="@color/C_000000"
                android:textSize="12sp"
                app:fontFamily="@font/notosans_medium_font" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_latest_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:lineSpacingExtra="5dp"
                android:text="@string/str_latest_version"
                android:textColor="@color/C_000000"
                android:textSize="12sp"
                app:fontFamily="@font/notosans_medium_font" />

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linear_update"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_marginBottom="56dp"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/C_FFFFFF"
            android:text="@string/str_update"
            android:textColor="@color/C_0C6CEE"
            android:layout_gravity="center_vertical"
            android:textSize="14sp"
            app:fontFamily="@font/notosans_medium_font" />

        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="12.1dp"
            android:layout_height="12.1dp"
            android:layout_marginTop="2dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/right_arrow" />

    </LinearLayout>

</LinearLayout>