<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="286dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/C_FFFFFF"
    android:orientation="vertical">


    <!-- ScollView가 담고 있는 필수 레이아웃 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <!-- 컨텐츠 내용 타이틀 -->
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/str_welcome"
            android:textColor="@color/C_000000"
            android:textSize="24dp"
            app:fontFamily="@font/notosans_medium_font" />

        <!-- welcome 내용 메시지 -->
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:text="@string/msg_welcome"
            android:textColor="@color/C_000000"
            android:textSize="12sp"
            app:fontFamily="@font/notosans_medium_font" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_check"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="20dp"
            android:background="@drawable/checked_selector"
            android:button="@android:color/transparent" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/notosans_medium_font"
            android:text="@string/msg_agree"
            android:textColor="@color/C_999999"
            android:textSize="12sp"
            app:fontFamily="@font/notosans_medium_font" />

    </LinearLayout>
    <!-- 버튼 -->

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/C_FFFFFF"
            android:text="@string/str_next"
            android:textColor="@color/C_999999"
            android:layout_gravity="center_vertical"
            android:textSize="14sp"
            app:fontFamily="@font/notosans_medium_font" />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/img_arrow"
            android:layout_width="12.1dp"
            android:layout_height="12.1dp"
            android:visibility="invisible"
            android:layout_marginTop="2dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/right_arrow" />

    </LinearLayout>
</LinearLayout>